terraform/modules/eks/deployment-configs/svc-simple-time-service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-simple-time-service-app
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: app-simple-time-service-app
